Removed loading text, fixed resume scrollbar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,7 +110,7 @@ body{
 
 .swipeBox{
     height:100%;
-    width:980px;
+    width:950px;
     margin: 0 auto;
     rigth: 0;
     left: 0;
